# humandbs

./: .dockerignore  .env.backup  .env.example  .env.staging  .gitignore  .lintstagedrc.json  Dockerfile  Dockerfile-dev  Dockerfile-prod  LICENSE  README.md  admin_uids.template.json  bun.lockb  bunfig.toml  check_syntax.js  compose.dev.yml  compose.override.podman.yml  compose.podman.yml  compose.staging.yml  compose.yml  deploy.md  env.dev  env.development  env.production  env.staging  eslint.config.js  eslint.config.mjs  garage-config.toml  hello.txt  nginx-entrypoint.sh  nginx.conf  nginx.conf.template  nginx.dev.conf.template  package.json  realm.dev.json  tmp-router-test.ts  tsconfig.json
.github/workflows/: deploy-to-gh-pages.yml
.husky/: pre-commit
app/: bun.lockb
apps/assistant-api/: .env.example  README.md  pyproject.toml
apps/assitant-api/: .env.example  .gitignore  Dockerfile  README.md  docker-compose-debug.yml  docker-compose.yml  pyproject.toml
apps/assitant-api/data/: icd10_jp_mapping.json
apps/assitant-api/src/: app.py  models.py
apps/assitant-api/src/prompts/: abstract_icd10_suggest.txt  application_form_extraction.txt  dataset_summary.txt  dataset_summary_system_message.txt  email_affiliation_check.txt  ethics_document_validation.txt  phone_association_check.txt  phone_main_number_check.txt
apps/assitant-api/src/services/: assessment_service.py  research_service.py
apps/backend/: .gitignore  .lintstagedrc.json  README.md  bunfig.toml  eslint.config.js  eslint.config.mjs  index.ts  package.json  prettier.config.js  redocly.yaml  tsconfig.build-types.json  tsconfig.json  tsv-docs.md
apps/frontend/: ---tailwind.config.js  .env.dev  .env.example  .env.test  .gitignore  .lintstagedrc.json  .prettierignore  AGENTS.md  DB.md  JWT_REFRESH.md  README.md  app.config.timestamp_1749200380116.js  app.config.ts  auth-client.ts  auth.ts  drizzle.config.ts  eslint.config.mjs  index.html  package.json  prettier.config.js  react-table.d.ts  (+9 more)
apps/frontend-old/: .env.test  .gitignore  package.json  prettier.config.mjs  tsconfig.json
docs/: elasticsearch-backup.md  keycloak-admin.md  keycloak.md  search_spec.md
e2e/: README.md  bunfig.toml  package.json
json_from_html/: processed-data-imputation_en.jsonl  processed-data-imputation_ja.jsonl  processed-data-wgs_en.jsonl  processed-data-wgs_ja.jsonl
json_from_joomla/: dataurl_test.html  hum0014_pagination_table.html  humandb_20231223_both.json  humandbs_en_20230926.json  humandbs_ja_20230926.json  imp.py  search.py  top.html
scripts/: README.md  es_snapshot.sh  fetch_keycloak_credential.sh  fetch_keycloak_uid.sh  setup-garage.sh
(+1670 files in other folders)
