[project]
name = "humandbs-assistant"
version = "0.1.0"
description = "Human Database Submission Assistant"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.118.2",
    "uvicorn==0.23.2",
    "python-multipart==0.0.6",
    "aiohttp==3.8.5",
    "aiohttp-retry==2.8.3",
    "openai==1.70.0",
    "python-dotenv==1.0.0",
    "beautifulsoup4==4.12.2",
    "langchain==0.3.21",
    "pypdf==3.16.0",
    "httpx",
    "tenacity==8.2.3",
    "langchain_community==0.3.20",
    "langchain_openai==0.3.12",
    "jinja2==3.1.6",
    "debugpy",
    "pyyaml==6.0.1",
    "google-api-python-client==2.171.0",
    "pymupdf4llm==0.0.24",
    "pymupdf==1.25.5",
    "pillow==10.4.0",
    "pytesseract==0.3.10",
    "playwright==1.55",
    "html2text==2025.4.15",
    "dnspython==2.5.0",
    "requests==2.31.0",
    "phonenumbers==9.0.10",
    "google-genai==1.42.0",
    "google-cloud-documentai",
    "google-auth==2.23.0",
    "python-docx==1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.0.0",
    "pytest-asyncio==0.23.5",
    "ruff==0.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# Lock file location
dev-dependencies = []

[tool.ruff]
# Python version
target-version = "py310"

# Line length
line-length = 120

# Exclude directories
extend-exclude = [
    "__pycache__",
    "*.pyc",
    ".pytest_cache",
    ".venv",
    "venv",
    "google_genai_cache",
]

[tool.ruff.lint]
# Enable rules
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "RET",   # flake8-return
]

# Disable specific rules
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "RET504", # unnecessary variable assignment before return
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "F811"]  # Allow unused imports in tests
"__init__.py" = ["F401"]      # Allow unused imports in __init__.py

[tool.ruff.lint.isort]
known-first-party = ["src", "services"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Line endings
line-ending = "lf"

[tool.hatch.build.targets.wheel]
packages = ["src"]